--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,13 @@
   <artifactId>prototype</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <java.version>1.8</java.version>
+    <maven.build.timestamp.format>dd-MM-yy_HH:mm</maven.build.timestamp.format>
+    <builddate>${maven.build.timestamp}</builddate>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
 
     <build>
         <plugins>
@@ -39,10 +43,14 @@
 	   <artifactId>MathParser.org-mXparser</artifactId>
 	   <version>5.0.2</version>
     </dependency>
+	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
 	<dependency>
-       <groupId>junit</groupId>
-       <artifactId>junit</artifactId>
-       <version>3.8.1</version>
-    </dependency>
+	    <groupId>org.junit.jupiter</groupId>
+	    <artifactId>junit-jupiter</artifactId>
+	    <version>5.8.2</version>
+	    <scope>test</scope>
+	</dependency>
+
+    
    </dependencies> 
 </project>
