--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
 	    <artifactId>commons-lang3</artifactId>
 	    <version>3.12.0</version>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+	<dependency>
+	    <groupId>com.google.guava</groupId>
+	    <artifactId>guava</artifactId>
+	    <version>31.1-jre</version>
+	</dependency>
 
 
     
