--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>pgarus</groupId>
-	<artifactId>fixpoint_evaluator</artifactId>
+	<artifactId>fixpoint-evaluator</artifactId>
 	<version>1.0.0</version>
 	<name>A Tool for Computing Probabilistic Program Expectations</name>
 	<description>A tool for evaluating fixpoints and calculating weakest preexpectations</description>
@@ -31,7 +31,7 @@
 		            <archive>
 		                <index>true</index>
 		                <manifest>
-		                    <mainClass>fixpoint_evaluator.MainClass</mainClass>
+		                    <mainClass>mainClass.MainClass</mainClass>
 		                </manifest>
 		            </archive>
 		        </configuration>
